apps/siyuan/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: siyuan
  namespace: siyuan
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "SiYuan"
    gethomepage.dev/group: "Files & Documents"
    gethomepage.dev/icon: "siyuan.png"
    gethomepage.dev/description: "Notes"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-siyuan
  hostnames:
    - siyuan.stevevaradi.me
  rules:
    - backendRefs:
        - name: siyuan
          port: 6806
